trunk/Archive2/bb/8132793645d00c/output
main.cpp:4:11: error: definition or redeclaration of 'x' cannot name the global scope
    int(::x); //does not compile
        ~~^
1 error generated.
