trunk/Archive2/bb/8132793645d00c/main.cpp
int x;

int main() {
    int(::x); //does not compile
    int(::x + 2); //compiles
}